pom.xml modify