@@ -1,70 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
+    <parent>
         <groupId>com.yz</groupId>
         <artifactId>tc-all</artifactId>
         <version>1.0.0.RELEASE</version>
-	</parent>
+    </parent>
 
-	<properties>
-		<pinpoint.rate>100</pinpoint.rate>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.deploy.skip>true</maven.deploy.skip>
-		<jvmSettings.agentId>demo-web</jvmSettings.agentId>
-		<jvmSettings.agentApplicationName>demo-web</jvmSettings.agentApplicationName>
-	</properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
 
-	<artifactId>tc-web</artifactId>
-	<version>${web.version}</version>
+    <artifactId>tc-web</artifactId>
+    <version>${web.version}</version>
 
-	<profiles>
-		<!-- dev -->
-		<profile>
-			<id>dev</id>
-			<properties>
-				<env>dev</env>
-			</properties>
-		</profile>
-		<!-- uat1 -->
-		<profile>
-			<id>uat1</id>
-			<properties>
-				<env>uat1</env>
-			</properties>
-				<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-		</profile>
-		<profile>
-			<id>stg</id>
-			<properties>
-				<env>stg</env>
-			</properties>
-		</profile>
-		<!-- prd -->
-		<profile>
-			<id>prd</id>
-			<properties>
-				<env>prd</env>
-			</properties>
-		</profile>
-	</profiles>
+    <profiles>
+        <!-- dev -->
+        <profile>
+            <id>dev</id>
+            <properties>
+                <env>dev</env>
+            </properties>
+        </profile>
+        <!-- uat1 -->
+        <profile>
+            <id>uat1</id>
+            <properties>
+                <env>uat1</env>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>stg</id>
+            <properties>
+                <env>stg</env>
+            </properties>
+        </profile>
+        <!-- prd -->
+        <profile>
+            <id>prd</id>
+            <properties>
+                <env>prd</env>
+            </properties>
+        </profile>
+    </profiles>
 
-	<dependencies>
-    	<dependency>
-			<groupId>com.yz</groupId>
-		    <artifactId>tc-contract</artifactId>
-			<version>${contract.version}</version>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>com.yz</groupId>
+            <artifactId>tc-contract</artifactId>
+            <version>1.0.0.RELEASE</version>
+        </dependency>
 
-		<dependency>
-			<groupId>com.yz</groupId>
-			<artifactId>tc-service</artifactId>
-			<version>${service.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>com.yz</groupId>
+            <artifactId>tc-service</artifactId>
+            <version>${service.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -80,122 +77,120 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-	</dependencies>
-	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<excludes>
-					<exclude>env/**</exclude>
-				</excludes>
-			</resource>
-			<resource>
-				<directory>src/main/resources/env/${env}</directory>
-				<targetPath>${project.build.outputDirectory}</targetPath>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.4</version>
-				<configuration>
-					<excludes>
-						<exclude>*.xml</exclude>
-						<exclude>*.properties</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>appassembler-maven-plugin</artifactId>
-				<version>1.10</version>
-				<configuration>
-					<repositoryLayout>flat</repositoryLayout>
-					<repositoryName>lib</repositoryName>
-					<configurationDirectory>conf</configurationDirectory>
-					<copyConfigurationDirectory>true</copyConfigurationDirectory>
-					<configurationSourceDirectory>src/main/resources/env/${env}</configurationSourceDirectory>
-					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
-					<target>${project.build.directory}</target>
-					<daemons>
-						<daemon>
-							<id>${project.name}</id>
-							<mainClass>com.yz.mmc.Application</mainClass>
-							<platforms>
-								<platform>jsw</platform>
-							</platforms>
-							<wrapperLogFile>logs/${project.name}.log</wrapperLogFile>
-							<generatorConfigurations>
-								<generatorConfiguration>
-									<generator>jsw</generator>
-									<includes>
-										<include>macosx-universal-64</include>
-										<include>linux-x86-32</include>
-										<include>linux-x86-64</include>
-										<include>windows-x86-32</include>
-										<include>windows-x86-64</include>
-									</includes>
-									<configuration>
-										<property>
-											<name>configuration.directory.in.classpath.first</name>
-											<value>conf</value>
-										</property>
-										<property>
-											<name>set.default.REPO_DIR</name>
-											<value>lib</value>
-										</property>
-										<property>
-											<name>wrapper.ping.timeout</name>
-											<value>300</value>
-										</property>
-										<property>
-											<name>wrapper.startup.timeout</name>
-											<value>300</value>
-										</property>
-									</configuration>
-								</generatorConfiguration>
-							</generatorConfigurations>
-							<jvmSettings>
-								<initialMemorySize>256M</initialMemorySize>
-								<maxMemorySize>768M</maxMemorySize>
-								<extraArguments>
-									<extraArgument>-server</extraArgument>
-									<extraArgument>-XX:PermSize=128M</extraArgument>
-									<extraArgument>-XX:MaxPermSize=256m</extraArgument>
-								</extraArguments>
-							</jvmSettings>
-						</daemon>
-					</daemons>
-				</configuration>
-				<executions>
-					<execution>
-						<id>generate-jsw-scripts</id>
-						<phase>package</phase>
-						<goals>
-							<goal>generate-daemons</goal>
-							<goal>create-repository</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.6</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<descriptor>assembly/bin.xml</descriptor>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    </dependencies>
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>env/**</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>src/main/resources/env/${env}</directory>
+                <targetPath>${project.build.outputDirectory}</targetPath>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <excludes>
+                        <exclude>*.xml</exclude>
+                        <exclude>*.properties</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>appassembler-maven-plugin</artifactId>
+                <version>1.10</version>
+                <configuration>
+                    <repositoryLayout>flat</repositoryLayout>
+                    <repositoryName>lib</repositoryName>
+                    <configurationDirectory>conf</configurationDirectory>
+                    <copyConfigurationDirectory>true</copyConfigurationDirectory>
+                    <configurationSourceDirectory>src/main/resources/env/${env}</configurationSourceDirectory>
+                    <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+                    <target>${project.build.directory}</target>
+                    <daemons>
+                        <daemon>
+                            <id>${project.name}</id>
+                            <mainClass>com.yz.tc.Application</mainClass>
+                            <platforms>
+                                <platform>jsw</platform>
+                            </platforms>
+                            <wrapperLogFile>logs/${project.name}.log</wrapperLogFile>
+                            <generatorConfigurations>
+                                <generatorConfiguration>
+                                    <generator>jsw</generator>
+                                    <includes>
+                                        <include>macosx-universal-64</include>
+                                        <include>linux-x86-32</include>
+                                        <include>linux-x86-64</include>
+                                        <include>windows-x86-32</include>
+                                        <include>windows-x86-64</include>
+                                    </includes>
+                                    <configuration>
+                                        <property>
+                                            <name>configuration.directory.in.classpath.first</name>
+                                            <value>conf</value>
+                                        </property>
+                                        <property>
+                                            <name>set.default.REPO_DIR</name>
+                                            <value>lib</value>
+                                        </property>
+                                        <property>
+                                            <name>wrapper.ping.timeout</name>
+                                            <value>300</value>
+                                        </property>
+                                        <property>
+                                            <name>wrapper.startup.timeout</name>
+                                            <value>300</value>
+                                        </property>
+                                    </configuration>
+                                </generatorConfiguration>
+                            </generatorConfigurations>
+                            <jvmSettings>
+                                <initialMemorySize>256M</initialMemorySize>
+                                <maxMemorySize>768M</maxMemorySize>
+                                <extraArguments>
+                                    <extraArgument>-server</extraArgument>
+                                </extraArguments>
+                            </jvmSettings>
+                        </daemon>
+                    </daemons>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>generate-jsw-scripts</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>generate-daemons</goal>
+                            <goal>create-repository</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.6</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <descriptor>assembly/bin.xml</descriptor>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
